deploy/common/sensor-deploy/sensor-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sensor
  namespace: stackrox
  labels:
    app.kubernetes.io/name: stackrox
    auto-upgrade.stackrox.io/component: "sensor"
spec:
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: collector
      - podSelector:
          matchLabels:
            service: collector
    ports:
    - port: 8443
      protocol: TCP
  - from:
    ports:
    - port: 9443
      protocol: TCP
  podSelector:
    matchLabels:
      app: sensor
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: collector-no-ingress
  namespace: stackrox
  labels:
    app.kubernetes.io/name: stackrox
    auto-upgrade.stackrox.io/component: "sensor"
spec:
  podSelector:
    matchLabels:
      app: collector
  policyTypes:
    - Ingress
